--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=ESP32/ESP8266 WiFi Connection manager with fallback web configuration p
 paragraph=Library for configuring ESP32/ESP8266 modules WiFi credentials at runtime.
 category=Communication
 url=https://github.com/edumeneses/WiFi32Manager
-architectures=esp32
+architectures=esp32, esp8266
